# unravel_dspy

./: .gitignore  README.md  agent.py  info.md  pyproject.toml  sample_log.txt
src/unravel_agent/: __init__.py  composer.py  mailer.py  resume_parser.py  scout.py
tests/: test_composer.py  test_scout.py
